Atualização das dependencias.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Intranet_Sistema_Federacao",
+  "name": "Intranet_Sistema_Federacao - GFOnline",
   "version": "0.1.0",
   "private": false,
   "dependencies": {
